# deboggler

./: .gitignore  CMakeLists.txt  LICENSE
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/rsahel/deboggler/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: french.txt
android/app/src/main/cpp/: CMakeLists.txt  ProcessImage.h  native-lib.cpp
android/app/src/main/java/com/rsahel/deboggler/: CameraFragment.kt  MainActivity.kt  SolutionFragment.kt  SolutionListAdapter.kt  Solutioner.kt
android/app/src/main/res/drawable/: background.xml  ic_camera_grid.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  white_rounded_square.xml
android/app/src/main/res/layout/: fragment_camera.xml  fragment_solution.xml  solution_item.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/rsahel/deboggler/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
src/: Assembly.h  ExtractDies.h  FindWhiteBlobs.h  MergeWhiteBlobs.h  ProcessStep.h  boggle_solutioner.cpp  commons.h  cvui.h  main.cpp  test.cpp
src/neuralnetwork/: main.cpp  neuralnetwork.h  perceptron.h  serialization.h
